Add favicon for internal server

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="favicon" href="favicon.ico"/>
 </head>
 <body>
-<script src="bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
