Implement solution and tests for the third exercise

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <link rel="favicon" href="favicon.ico"/>
+    <style>
+        .chart-title {
+            font-family: sans-serif;
+            font-size: 3rem;
+        }
+    </style>
 </head>
 <body>
     <script src="bundle.js"></script>
