Implement first chart exercise

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -7,6 +7,14 @@
             font-family: sans-serif;
             font-size: 3rem;
         }
+
+        .chart div {
+            margin: 3px;
+            padding: 3px;
+            text-align: right;
+            color: white;
+            background-color: steelblue;
+        }
     </style>
 </head>
 <body>
